syntax = "proto3";

option go_package = "github.com/yeyeye2333/PacificaMQ/test/test_grpc";

package test_grpc;

service Hello {
    rpc TestRpc(HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}
